--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,8 @@ repo: status.folcode # The name of this repository
 sites:
   - name: Folcademy
     url: https://folcademy.com
+  - name: Folcode
+    url: https://www.folcode.com  
   - name: FolcademyMalTest
     url: https://folcademymal.com
 status-website:
