--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,11 +2,12 @@
 owner: Folcode # Your GitHub organization or username, where this repository lives
 repo: status.folcode # The name of this repository
 
-sites:
-  - name: Folcademy
-    url: https://folcademy.com
-  - name: Folcode
-    url: https://www.folcode.com  
+#sites:
+#  - name: Folcademy
+#    url: https://folcademy.com
+#  - name: Folcode
+#    url: https://www.folcode.com  
+
 status-website:
   theme: night
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
