--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,7 +2,7 @@
 owner: Folcode # Your GitHub organization or username, where this repository lives
 repo: status.folcode # The name of this repository
 
-sites:
+#sites:
 #  - name: Folcademy
 #    url: https://folcademy.com
 #  - name: Folcode
